[gd_scene load_steps=16 format=2]

[ext_resource path="res://fsm/states/state.gd" type="Script" id=1]
[ext_resource path="res://fsm/fsm.gd" type="Script" id=2]
[ext_resource path="res://fsm/states/charge.gd" type="Script" id=3]
[ext_resource path="res://pieces/entity_detector.tscn" type="PackedScene" id=4]
[ext_resource path="res://fsm/states/patrol_air_periodic_attack.gd" type="Script" id=5]
[ext_resource path="res://entities/enemies/apparition.gd" type="Script" id=6]
[ext_resource path="res://entities/enemies/apparition.png" type="Texture" id=7]
[ext_resource path="res://fsm/states/stop.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 6, 6 )

[sub_resource type="CircleShape2D" id=10]
radius = 256.0

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "attacc"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[sub_resource type="Animation" id=11]
resource_name = "hide"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=4]
resource_name = "postattacc"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("flippable/sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[node name="apparition" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 6 )
flip_path = NodePath("flippable")
gravity_active = false

[node name="hitbox" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="flippable" type="Node2D" parent="."]
use_parent_material = true

[node name="sprite" type="Sprite" parent="flippable"]
use_parent_material = true
texture = ExtResource( 7 )
hframes = 4
vframes = 4

[node name="player_detector" parent="flippable" instance=ExtResource( 4 )]

[node name="hitbox" type="CollisionShape2D" parent="flippable/player_detector"]
visible = false
shape = SubResource( 10 )

[node name="barrel" type="Position2D" parent="flippable"]
position = Vector2( 16, 8 )

[node name="animator" type="AnimationPlayer" parent="."]
autoplay = "idle"
anims/RESET = SubResource( 1 )
anims/attacc = SubResource( 2 )
anims/hide = SubResource( 11 )
anims/idle = SubResource( 7 )
anims/postattacc = SubResource( 4 )

[node name="fsm" type="Node" parent="."]
script = ExtResource( 2 )
animator_path = NodePath("../animator")

[node name="invisible" type="Node" parent="fsm"]
script = ExtResource( 1 )

[node name="patrol" type="Node" parent="fsm"]
script = ExtResource( 5 )
animation = "idle"
speed = 50.0
hover_distance = 64.0

[node name="attacc" type="Node" parent="fsm"]
script = ExtResource( 3 )
animation = "attacc"
auto_proceed = "patrol"
recover_animation = "postattacc"
acceleration = 3.0

[node name="hide" type="Node" parent="fsm"]
script = ExtResource( 8 )
animation = "hide"

[connection signal="updated" from="flippable/player_detector" to="." method="_on_player_detector_updated"]
[connection signal="entered" from="fsm/invisible" to="." method="_on_invisible_entered"]
[connection signal="exited" from="fsm/invisible" to="." method="_on_invisible_exited"]
[connection signal="activated" from="fsm/attacc" to="." method="_on_attacc_activated"]
